# redcross_lottery_nan

./: .env.example  .gitignore  README.md  build_docker.sh  check_reward.php  docker-compose.yml  index copy.php  index.php  test.php  test2.php  upload.php
Assets/: style.css
Assets/script/: index.js
Includes/: admin_footer.php  admin_header.php  admin_navigation.php  header.php  navigation.php
YWRtaW4=/: edit.php  index.php  insert.php  login_auth.php  read.php  testadmin.php  users.json  welcome.php
admin/: Dockerfile  api.php  delete.php  edit.php  insert.php  login.html  login.php  login_auth.php  package.json  read.php  testadmin.php  update.php  vite.config.ts  welcome.php
admin/src/: App.css  App.tsx
admin/src/components/: Footer.tsx  Insert.tsx  Navbar.tsx  Showlottery.tsx
backend/: .dockerignore  README.md  create_container.sh  package.json  pyproject.toml  server.js  swagger.js
backend/configs/: db.js
backend/controllers/: authen_controller.js  lotteries_controller.js  reward_controller.js  userController.js
backend/middlewares/: authMiddleware.js
backend/models/: lotteries_model.js  sequelize.js  user_model.js
backend/routes/: api_route.js  authen_route.js  lotteries_route.js  reward_route.js  user_routes.js
backend/utils/: generateToken.js
conf.d/: ngnix.conf
connection/: connect.php
db/: db.sql
frontend/: Dockerfile  README.md  apache2.conf  check_reward.php  index.html  index.php  package.json  test.php  upload.php
frontend/Assets/: style.css
frontend/Assets/script/: index.js  script.js
frontend/Includes/: admin_footer.php  admin_header.php  header.php
frontend/admin/: api.php  delete.php  index.php  users.json  welcome.php
frontend/connection/: connect.php
frontend/src/app/: landing.css  layout.tsx  page.tsx
frontend/src/components/: ComingSoon.tsx  Dasborad.tsx  Footer.tsx  ImageUpload.tsx  Insert.tsx  LotteryChecker.tsx  (+4 more)
frontend_vite_backup/: index.html  vite.config.ts
frontend_vite_backup/src/: App.tsx
(+10 files in other folders)
